<property> and <properties> element must be interleavable (=> FeatureMap to the rescue)

--- a/plugins/org.eclipse.pde.ds.edit/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.edit/plugin.properties
@@ -7,7 +7,7 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.1 2009/02/12 21:18:26 bcabe Exp $
+# $Id: plugin.properties,v 1.2 2009/02/14 20:00:08 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Edit
 providerName = Eclipse.org
@@ -70,3 +70,4 @@ _UI_Cardinality__1_N_literal = 1..n
 _UI_ConfigurationPolicy_optional_literal = optional
 _UI_ConfigurationPolicy_require_literal = require
 _UI_ConfigurationPolicy_ignore_literal = ignore
+_UI_Component_allProperties_feature = All Properties
