--- a/plugins/org.eclipse.pde.ds.edit/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.edit/plugin.properties
@@ -7,7 +7,7 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.2 2009/02/14 20:00:08 bcabe Exp $
+# $Id: plugin.properties,v 1.3 2009/02/15 00:42:47 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Edit
 providerName = Eclipse.org
@@ -71,3 +71,8 @@ _UI_ConfigurationPolicy_optional_literal = optional
 _UI_ConfigurationPolicy_require_literal = require
 _UI_ConfigurationPolicy_ignore_literal = ignore
 _UI_Component_allProperties_feature = All Properties
+_UI_Component_mixed_feature = Mixed
+_UI_XMLTypeDocumentRoot_comment_feature = Comment
+_UI_XMLTypeDocumentRoot_text_feature = Text
+_UI_XMLTypeDocumentRoot_processingInstruction_feature = Processing Instruction
+_UI_XMLTypeDocumentRoot_cDATA_feature = CDATA
