work in progress... investigating a way to leverage SSE to have a nice source page

--- a/plugins/org.eclipse.pde.ds.edit/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.edit/plugin.properties
@@ -7,7 +7,7 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.3 2009/02/15 00:42:47 bcabe Exp $
+# $Id: plugin.properties,v 1.4 2009/02/15 20:48:23 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Edit
 providerName = Eclipse.org
@@ -76,3 +76,13 @@ _UI_XMLTypeDocumentRoot_comment_feature = Comment
 _UI_XMLTypeDocumentRoot_text_feature = Text
 _UI_XMLTypeDocumentRoot_processingInstruction_feature = Processing Instruction
 _UI_XMLTypeDocumentRoot_cDATA_feature = CDATA
+_UI_JavaType_String_literal = String
+_UI_JavaType_Long_literal = Long
+_UI_JavaType_Double_literal = Double
+_UI_JavaType_Float_literal = Float
+_UI_JavaType_Integer_literal = Integer
+_UI_JavaType_Byte_literal = Byte
+_UI_JavaType_Character_literal = Character
+_UI_JavaType_Boolean_literal = Boolean
+_UI_JavaType_Short_literal = Short
+_UI_Property_value1_feature = Value1
