added the 'modified' attribute to model&editor (see https://bugs.eclipse.org/bugs/show_bug.cgi?id=272599#c0)

--- a/plugins/org.eclipse.pde.ds.edit/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.edit/plugin.properties
@@ -7,7 +7,7 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.4 2009/02/15 20:48:23 bcabe Exp $
+# $Id: plugin.properties,v 1.5 2009/04/24 21:33:37 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Edit
 providerName = Eclipse.org
@@ -86,3 +86,4 @@ _UI_JavaType_Character_literal = Character
 _UI_JavaType_Boolean_literal = Boolean
 _UI_JavaType_Short_literal = Short
 _UI_Property_value1_feature = Value1
+_UI_Component_modified_feature = Modified
