removing test.xml

--- a/tests/org.eclipse.pde.ds.tests/build.properties
+++ b/tests/org.eclipse.pde.ds.tests/build.properties
@@ -7,12 +7,11 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: build.properties,v 1.1 2009/07/08 16:38:11 bcabe Exp $
+# $Id: build.properties,v 1.2 2009/07/08 21:07:24 bcabe Exp $
 
 bin.includes = .,\
                META-INF/,\
-               plugin.properties,\
-               test.xml
+               plugin.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
