unify the experimental editor name with the name of the "official" one

--- a/plugins/org.eclipse.pde.ds.ui/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.ui/plugin.properties
@@ -7,9 +7,9 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.1 2009/02/13 13:26:26 bcabe Exp $
+# $Id: plugin.properties,v 1.2 2009/07/18 20:10:11 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Editor
 providerName = Eclipse.org
 
-editor.name = Service Component Editor (experimental)
+editor.name = Component Definition Editor (experimental)
