SCR 1.1 schema of OSGi 4.2 cmpdm draft  20090310

--- a/plugins/org.eclipse.pde.ds/build.properties
+++ b/plugins/org.eclipse.pde.ds/build.properties
@@ -7,14 +7,15 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: build.properties,v 1.1 2009/02/12 17:06:39 bcabe Exp $
+# $Id: build.properties,v 1.2 2009/07/18 20:26:28 bcabe Exp $
 
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                model/scr-1.1.ecore,\
                model/scr-1.1.genmodel,\
-               plugin.properties
+               plugin.properties,\
+               model/scr-1.1.xsd
 jars.compile.order = .
 source.. = src/
 output.. = bin/
