added an action to configure experimental scr builder

--- a/plugins/org.eclipse.pde.ds.ui/plugin.properties
+++ b/plugins/org.eclipse.pde.ds.ui/plugin.properties
@@ -7,9 +7,10 @@
 # Contributors:
 #     Anyware Technologies - initial API and implementation
 #
-# $Id: plugin.properties,v 1.2 2009/07/18 20:10:11 bcabe Exp $
+# $Id: plugin.properties,v 1.3 2009/07/29 10:32:13 bcabe Exp $
 
 pluginName = Declarative Services 1.1 Editor
 providerName = Eclipse.org
 
 editor.name = Component Definition Editor (experimental)
+command.configureDSBuilder.name = Configure experimental DS Builder
