buzilla 289607 - builder's validation selector should be more selective
Added a client selector that selects eobject in the scr package.

--- a/plugins/org.eclipse.pde.ds.builder/plugin.xml
+++ b/plugins/org.eclipse.pde.ds.builder/plugin.xml
@@ -100,10 +100,9 @@
       <clientContext
             default="false"
             id="org.eclipse.pde.ds.builder.validationContext">
-         <enablement>
-            <instanceof
-                  value="java.lang.Object">
-            </instanceof></enablement>
+         <selector
+               class="org.eclipse.pde.ds.builder.internal.validation.ClientSelector">
+         </selector>
       </clientContext>
       <binding
             context="org.eclipse.pde.ds.builder.validationContext"
